# LinkedIn-Easy-Apply-Bot

./: config.yaml  easyapplybot.py  pyproject.toml
